--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+  color-scheme: light dark;
+}
+
+
+@layer components {
+  .card {
+    @apply p-4 rounded-lg border border-slate-200 dark:border-slate-700;
+  }
+}
