Docker and Google Cloud configs

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,15 @@
-<nav class="flex items-center justify-between h-16 px-3">
-    <h1 class="text-xl font-medium">Kyle Rummens</h1>
+<div class="w-full max-w-5xl mx-auto px-6">
+    <nav class="flex items-center justify-between h-16">
+        <h1 class="text-xl font-medium">Kyle Rummens</h1>
 
-    <div class="flex items-center gap-3">
-        <a routerLink="">Home</a>
-        <a routerLink="code">Code</a>
-        <a routerLink="blog">Blog</a>
-        <a routerLink="hobbies">Hobbies</a>
-        <a routerLink="contact">Contact</a>
-    </div>
-</nav>
+        <div class="flex items-center gap-3">
+            <a routerLink="">Home</a>
+            <a routerLink="code">Code</a>
+            <a routerLink="blog">Blog</a>
+            <a routerLink="hobbies">Hobbies</a>
+            <a routerLink="contact">Contact</a>
+        </div>
+    </nav>
 
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
+</div>
