--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,13 +2,50 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  color-scheme: light dark;
-}
-
 
 @layer components {
   .card {
     @apply p-4 rounded-lg border border-slate-200 dark:border-slate-700;
   }
+}
+
+@layer utilities {
+
+  .label {
+    @apply text-slate-700 dark:text-gray-200;
+  }
+
+  .secondary-label {
+    @apply text-slate-500 dark:text-gray-400;
+  }
+
+  .date {
+    font-family: 'Roboto Mono', monospace;
+  }
+}
+
+
+:root {
+  color-scheme: light dark;
+}
+
+html, body {
+  font-family: 'Roboto', sans-serif;
+  @apply label;
+}
+
+.prose :where(code):not(:where([class~="not-prose"] *))::before {
+  content: "" !important;
+}
+
+.prose :where(code):not(:where([class~="not-prose"] *))::after {
+  content: "" !important;
+}
+
+.prose :where(code):not(:where([class~="not-prose"] *)):not(pre code) {
+    @apply bg-gray-200 rounded;
+    overflow-x: auto;
+    font-weight: 400;
+    font-size: 0.875em;
+    padding: 0.1em 0.25em;
 }
