Landing page design initial commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,56 @@
-<div class="w-full max-w-5xl mx-auto px-6">
-    <nav class="flex items-center justify-between h-16">
+<div class="flex min-h-screen flex-col items-center">
+
+    <div
+        class="flex h-full w-full max-w-[1728px] flex-1 flex-col items-start px-6 lg:flex-row lg:px-16 lg:gap-16 xl:gap-20">
+        <div
+            class="flex w-full max-w-full flex-col py-10 lg:sticky lg:top-0 lg:mb-0 lg:min-h-screen lg:flex-1 lg:overflow-visible lg:py-16">
+
+            <img src="assets/profile.webp" class="h-52 w-52 rounded-full mb-8">
+
+            <h1 class="label text-4xl font-medium mb-4">Kyle Rummens</h1>
+            <h2 class="secondary-label text-2xl font-light">I'm a software engineer, rock climber, wannabe pilot, and
+                recovering Dr. Pepper addict</h2>
+
+        </div>
+        <div class="pb-10 lg:min-h-screen lg:py-16 flex w-full flex-col lg:w-[550px] xl:w-[820px]">
+
+            <div class="mb-20">
+                <div class="text-xl font-medium label m-6">My links</div>
+                <div class="grid grid-cols-4 grid-rows-2 gap-10">
+                    <div class="h-40 w-full bg-blue-100 rounded-3xl"></div>
+                    <div class="h-40 w-full bg-blue-100 rounded-3xl"></div>
+                    <div class="col-span-2 row-span-2 h-full w-full bg-blue-100 rounded-3xl"></div>
+                    <div class="h-40 w-full bg-blue-100 rounded-3xl"></div>
+                    <div class="h-40 w-full bg-blue-100 rounded-3xl"></div>
+                </div>
+            </div>
+
+            <div class="mb-20">
+                <div class="text-xl font-medium label m-6">My links</div>
+                <div class="grid grid-cols-4 grid-rows-2 gap-10">
+                    <div class="col-span-2 row-span-2 h-full w-full bg-blue-100 rounded-3xl"></div>
+                    <div class="h-40 w-full bg-blue-100 rounded-3xl"></div>
+                    <div class="h-40 w-full bg-blue-100 rounded-3xl"></div>
+                    <div class="h-40 w-full bg-blue-100 rounded-3xl"></div>
+                    <div class="h-40 w-full bg-blue-100 rounded-3xl"></div>
+                </div>
+            </div>
+
+            <div class="mb-20">
+                <div class="text-xl font-medium label m-6">My links</div>
+                <div class="grid grid-cols-4 grid-rows-2 gap-10">
+                    <div class="h-40 w-full bg-blue-100 rounded-3xl"></div>
+                    <div class="h-40 w-full bg-blue-100 rounded-3xl"></div>
+                    <div class="col-span-2 row-span-2 h-full w-full bg-blue-100 rounded-3xl"></div>
+                    <div class="h-40 w-full bg-blue-100 rounded-3xl"></div>
+                    <div class="h-40 w-full bg-blue-100 rounded-3xl"></div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+    <!--<nav class="flex items-center justify-between h-16">
         <h1 class="text-xl font-medium">Kyle Rummens</h1>
 
         <div class="flex items-center gap-3">
@@ -9,7 +60,5 @@
             <a routerLink="hobbies">Hobbies</a>
             <a routerLink="contact">Contact</a>
         </div>
-    </nav>
-
-    <router-outlet></router-outlet>
+    </nav>-->
 </div>
