Github card and blog posts

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,68 +14,7 @@
         </div>
         <div class="pb-10 lg:min-h-screen lg:py-16 flex w-full flex-col lg:w-[550px] xl:w-[820px]">
 
-            <div class="mb-20">
-                <div class="text-xl font-medium label m-6">My links</div>
-                <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-2 xl:grid-cols-4 grid-rows-2 gap-5 lg:gap-10">
-                    <a class="h-40 w-full card dark:bg-slate-50/10 hover:bg-slate-50 dark:hover:bg-slate-50/15" href="https://github.com/kylerummens" target="_blank">
-                        <div class="logo-box bg-github">
-                            <img src="/assets/github.png">
-                        </div>
-                        <div class="label">kylerummens</div>
-                        <div class="secondary-label text-xs">9 repositories</div>
-                        <div class="secondary-label text-xs">840 contributions in the past year</div>
-                    </a>
-                    <a class="h-40 w-full card bg-linkedin/10 hover:bg-linkedin/15" href="https://www.linkedin.com/in/kyle-rummens/" target="_blank">
-                        <div class="logo-box !p-1 bg-linkedin">
-                            <img src="/assets/linkedin.png">
-                        </div>
-                        <div class="label">kylerummens</div>
-                        <div class="secondary-label text-xs">9 repositories</div>
-                        <div class="secondary-label text-xs">840 contributions in the past year</div>
-                    </a>
-                    <div class="col-span-2 row-span-2 h-full w-full card bg-blue-100"></div>
-                    <a class="h-40 w-full card bg-twitter/10 hover:bg-twitter/15" href="https://twitter.com/KyleRummens"
-                        target="_blank">
-                        <div class="logo-box bg-twitter">
-                            <img src="/assets/twitter.png">
-                        </div>
-                        <div class="label">@KyleRummens</div>
-                        <div class="secondary-label text-xs">9 repositories</div>
-                        <div class="secondary-label text-xs">840 contributions in the past year</div>
-                    </a>
-                    <a class="h-40 w-full card bg-stackoverflow/10 hover:bg-stackoverflow/15"
-                        href="https://stackoverflow.com/users/4435313/krummens" target="_blank">
-                        <div class="logo-box !p-1 bg-stackoverflow">
-                            <img src="/assets/stackoverflow.png">
-                        </div>
-                        <div class="label">krummens</div>
-                        <div class="secondary-label text-xs">9 repositories</div>
-                        <div class="secondary-label text-xs">840 contributions in the past year</div>
-                    </a>
-                </div>
-            </div>
-
-            <div class="mb-20">
-                <div class="text-xl font-medium label m-6">My links</div>
-                <div class="grid grid-cols-4 grid-rows-2 gap-10">
-                    <div class="col-span-2 row-span-2 h-full w-full card"></div>
-                    <div class="h-40 w-full card"></div>
-                    <div class="h-40 w-full card"></div>
-                    <div class="h-40 w-full card"></div>
-                    <div class="h-40 w-full card"></div>
-                </div>
-            </div>
-
-            <div class="mb-20">
-                <div class="text-xl font-medium label m-6">My links</div>
-                <div class="grid grid-cols-4 grid-rows-2 gap-10">
-                    <div class="h-40 w-full card"></div>
-                    <div class="h-40 w-full card"></div>
-                    <div class="col-span-2 row-span-2 h-full w-full card"></div>
-                    <div class="h-40 w-full card"></div>
-                    <div class="h-40 w-full card"></div>
-                </div>
-            </div>
+            <router-outlet></router-outlet>
 
         </div>
     </div>
