--- a/src/app/pages/blog-post/blog-post.component.html
+++ b/src/app/pages/blog-post/blog-post.component.html
@@ -2,8 +2,18 @@
     <ng-container *ngIf="!error; else showError">
         <ng-container *ngIf="post; else showNoPost">
             <main [class.article-loaded]="article_loaded">
+
+                <a class="outlined-button" routerLink="">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="15px"
+                        fill="currentColor">
+                        <path d="M0 0h24v24H0V0z" fill="none" />
+                        <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z" />
+                    </svg>
+                    <span>Back</span>
+                </a>
+
                 <article
-                    class="pt-28 pb-24 prose prose-slate max-w-none dark:prose-invert prose-headings:text-slate-700 prose-a:text-blue-500">
+                    class="pt-12 pb-24 prose prose-slate max-w-none dark:prose-invert prose-headings:text-slate-700 prose-headings:dark:text-slate-200 prose-a:text-blue-500">
                     <header class="not-prose mb-24">
                         <time class="date secondary-label" [dateTime]="post.published_at">{{ post.published_at |
                             date:'MM.dd.yy' }}</time>
