--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,7 +1,7 @@
 <!-- My Links -->
 <div class="mb-20">
     <div class="text-xl font-medium label m-6">My links</div>
-    <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-2 xl:grid-cols-4 grid-rows-2 gap-5 lg:gap-10">
+    <div class="grid grid-cols-2 md:grid-cols-4 lg:grid-cols-2 xl:grid-cols-4 gap-5 lg:gap-10">
         <a class="h-40 w-full card bg-instagram/10 hover:bg-instagram/15" href="https://www.instagram.com/kyle.rummens"
             target="_blank">
             <div class="logo-box !p-0">
@@ -82,7 +82,7 @@
     <div class="grid grid-cols-1 gap-10">
         <div *ngFor="let project of code_projects">
             <!--<pre><code [highlight]="project.content"></code></pre>-->
-            <pre class="line-numbers">
+            <pre style="max-height:400px">
 <code [highlight]="project.content" [language]="project.language"></code>
                 </pre>
         </div>
