--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -82,7 +82,9 @@
         <a *ngFor="let code_link of code_links" [href]="code_link.link" target="_blank"
             class="card hover:bg-slate-50 dark:bg-slate-50/5 dark:hover:bg-slate-50/10">
 
-            <div class="mb-5">
+            <div class="mb-5"
+                [ngClass]="getCodeLinkBaseUrl(code_link.link) === 'github.com' ? 'rounded-full bg-github inline-flex items-center justify-center' : ''"
+                [style.padding]="getCodeLinkBaseUrl(code_link.link) === 'github.com' ? '4px 4px 5px 4px' : '0'">
                 <img [src]="getCodeLinkImage(code_link.link)" style="max-height:40px">
             </div>
 
